--- a/project/res/layout/fragment_tablet_tripbucket_your_trip_to.xml
+++ b/project/res/layout/fragment_tablet_tripbucket_your_trip_to.xml
@@ -10,7 +10,7 @@
 
     <LinearLayout
         android:id="@+id/trip_to_layout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="14dp"
         android:layout_marginRight="14dp"
@@ -19,26 +19,28 @@
 
         <View
             android:id="@+id/left_divider"
-            android:layout_width="38dp"
-            android:layout_height="0.5dp"
-            android:layout_marginRight="14dp"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/one_px_hdpi_two_px_xhdpi"
+            android:layout_weight="1"
             android:background="#5C6F7F" />
 
         <TextView
             android:id="@+id/top_header_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="14dp"
+            android:layout_marginRight="14dp"
             android:gravity="center"
             android:text="@string/trip_to"
             android:textAllCaps="true"
             android:textColor="@android:color/white"
-            android:textSize="18sp" />
+            android:textSize="18dp" />
 
         <View
             android:id="@+id/right_divider"
-            android:layout_width="38dp"
-            android:layout_height="0.5dp"
-            android:layout_marginLeft="14dp"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/one_px_hdpi_two_px_xhdpi"
+            android:layout_weight="1"
             android:background="#5C6F7F" />
     </LinearLayout>
 
@@ -63,7 +65,7 @@
         android:layout_marginTop="-20dp"
         android:textAllCaps="true"
         android:textColor="#9BA1A6"
-        android:textSize="42sp"
+        android:textSize="42dp"
         android:textStyle="bold" />
 
     <LinearLayout
@@ -76,27 +78,32 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="@dimen/one_px_hdpi_two_px_xhdpi"
             android:layout_marginLeft="14dp"
             android:layout_marginRight="14dp"
             android:layout_marginTop="110dp"
             android:background="#5C6F7F" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/trip_bucket_suitcase_image_padding_top"
-            android:src="@drawable/ic_trip_empty_suitcase" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
         <TextView
             android:id="@+id/trip_empty_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:drawablePadding="15dp"
+            android:drawableTop="@drawable/ic_trip_empty_suitcase"
             android:gravity="center"
             android:text="@string/trip_empty"
             android:textColor="#8695A0"
             android:textSize="17sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
     </LinearLayout>
 
 </LinearLayout>
