--- a/project/res/layout/fragment_tablet_checkout_data_form.xml
+++ b/project/res/layout/fragment_tablet_checkout_data_form.xml
@@ -20,6 +20,7 @@
             android:id="@+id/header_text_button_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="0"
             android:gravity="center_vertical"
             android:text="@string/done"
             app:textAllCaps="true"
@@ -31,6 +32,7 @@
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
+            android:layout_weight="0"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:background="@color/divider_grey"/>
@@ -38,11 +40,29 @@
         <com.expedia.bookings.widget.TextView
             android:id="@+id/header_tv"
             android:layout_width="wrap_content"
+            android:layout_weight="0"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:text="@string/traveler_num_and_category_TEMPLATE"
             app:textStyle="light"
             android:textSize="16dp"/>
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:background="@color/divider_grey"/>
+
+        <Spinner
+            android:id="@+id/header_spinner"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:layout_height="wrap_content"/>
+
     </LinearLayout>
 
     <ScrollView
