122 Itin view - change image placeholders
Summary:
Changing image placeholders for Itin cards. Currently images kept the same as Expedia (except for hotel).
Added buildconfigfield to set the server for fetching images to travelocity.

Reviewers: brennan

Reviewed By: brennan

CC: sugupta

Differential Revision: https://phabricator.mobiata.com/D121

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -291,4 +291,12 @@
     <attr name="travellerInfoPageLogo" format="reference"/>
     <attr name="travellerInfoPageLogoDisabled" format="reference"/>
 
+    <!-- Itin placeholder drawables -->
+    <attr name="itinActivityPlaceholderDrawable" format="reference" />
+    <attr name="itinCarPlaceholderDrawable" format="reference" />
+    <attr name="itinCruisePlaceholderDrawable" format="reference" />
+    <attr name="itinHotelPlaceholderDrawable" format="reference" />
+    <attr name="itinFlightPlaceholderDrawable" format="reference" />
+    <attr name="itinDefaultPlaceholderDrawable" format="reference" />
+
 </resources>
