--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -276,6 +276,12 @@
         <item name="dropDownListViewStyle">@style/Widget.Sherlock.Light.ListView.DropDown</item>
         <item name="android:dropDownListViewStyle">@style/Widget.Sherlock.Light.ListView.DropDown</item>
         <item name="logoutConfirmationString">@string/logout_confirmation</item>
+        <item name="itinActivityPlaceholderDrawable">@drawable/itin_header_placeholder_activities</item>
+        <item name="itinCarPlaceholderDrawable">@drawable/default_flights_background</item>
+        <item name="itinCruisePlaceholderDrawable">@drawable/itin_header_placeholder_cruises</item>
+        <item name="itinHotelPlaceholderDrawable">@drawable/bg_itin_placeholder</item>
+        <item name="itinFlightPlaceholderDrawable">@drawable/bg_itin_placeholder_flight</item>
+        <item name="itinDefaultPlaceholderDrawable">@drawable/bg_itin_fallback_activity</item>
     </style>
 
     <style name="ItineraryTheme" parent="@style/Theme.Sherlock.Light.DarkActionBar">
