168: Changing Itin card action bar color to be Travelocity blue
Reviewers: brennan

Reviewed By: brennan

Differential Revision: https://phabricator.mobiata.com/D122

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -298,5 +298,6 @@
     <attr name="itinHotelPlaceholderDrawable" format="reference" />
     <attr name="itinFlightPlaceholderDrawable" format="reference" />
     <attr name="itinDefaultPlaceholderDrawable" format="reference" />
+    <attr name="itinCardTitleBackground" format="reference" />
 
 </resources>
