--- a/project/res/layout/fragment_tablet_results_search.xml
+++ b/project/res/layout/fragment_tablet_results_search.xml
@@ -5,4 +5,91 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.expedia.bookings.widget.FrameLayoutTouchController
+        android:id="@+id/top_half_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+        <com.expedia.bookings.widget.FrameLayoutTouchController
+            android:id="@+id/search_bar_conatiner"
+            android:background="#66000000"
+            android:layout_width="match_parent"
+            android:layout_gravity="bottom"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/dest_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="22dp"
+                android:text="Paris, France"
+                android:textColor="#FFFFFF"
+                android:gravity="center_vertical"
+                android:layout_margin="8dp"
+                android:drawablePadding="8dp"
+                android:layout_gravity="center_vertical|left"
+                android:drawableLeft="@drawable/ic_action_bar_magnifying_glass"/>
+
+
+            <LinearLayout
+                android:id="@+id/right_buttons_container"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_gravity="center_vertical|right">
+
+
+                <TextView
+                    android:id="@+id/origin_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16dp"
+                    android:text="Fly from San Francisco, CA"
+                    android:textColor="#FFFFFF"
+                    android:gravity="center_vertical"
+                    android:layout_marginRight="16dp"
+                    android:drawablePadding="8dp"
+                    android:drawableLeft="@drawable/ic_suggest_current_location"/>
+
+
+                <TextView
+                    android:id="@+id/calendar_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16dp"
+                    android:text="Cat 12 - Cat 15"
+                    android:textColor="#FFFFFF"
+                    android:gravity="center_vertical"
+                    android:layout_marginRight="16dp"
+                    android:drawablePadding="8dp"
+                    android:drawableLeft="@drawable/ic_calendar"/>
+
+
+                <TextView
+                    android:id="@+id/traveler_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16dp"
+                    android:text="1 Traveler"
+                    android:textColor="#FFFFFF"
+                    android:gravity="center_vertical"
+                    android:layout_marginRight="16dp"
+                    android:drawablePadding="8dp"
+                    android:drawableLeft="@drawable/ic_traveler_white"/>
+
+
+            </LinearLayout>
+        </com.expedia.bookings.widget.FrameLayoutTouchController>
+    </com.expedia.bookings.widget.FrameLayoutTouchController>
+
+    <com.expedia.bookings.widget.FrameLayoutTouchController
+        android:id="@+id/widget_container"
+        android:background="#FFFFFF"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </com.expedia.bookings.widget.FrameLayoutTouchController>
+
 </FrameLayout>
