--- a/project/res/layout/fragment_tablet_results_search.xml
+++ b/project/res/layout/fragment_tablet_results_search.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -16,7 +17,8 @@
             android:background="#66000000"
             android:layout_width="match_parent"
             android:layout_gravity="bottom"
-            android:layout_height="wrap_content">
+            android:layout_height="?android:attr/actionBarSize"
+            tools:ignore="NewApi">
 
             <TextView
                 android:id="@+id/dest_btn"
