--- a/project/res/layout/fragment_tablet_results_search.xml
+++ b/project/res/layout/fragment_tablet_results_search.xml
@@ -92,6 +92,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <com.expedia.bookings.widget.FrameLayoutTouchController
+            android:id="@+id/calendar_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <com.expedia.bookings.widget.FrameLayoutTouchController
+            android:id="@+id/traveler_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <com.expedia.bookings.widget.FrameLayoutTouchController
+            android:id="@+id/origin_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
     </com.expedia.bookings.widget.FrameLayoutTouchController>
 
 </FrameLayout>
