--- a/project/res/layout/fragment_tablet_results_search.xml
+++ b/project/res/layout/fragment_tablet_results_search.xml
@@ -48,7 +48,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16dp"
-                    android:text="Fly from San Francisco, CA"
                     android:textColor="#FFFFFF"
                     android:gravity="center_vertical"
                     android:layout_marginRight="16dp"
@@ -61,7 +60,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16dp"
-                    android:text="Cat 12 - Cat 15"
                     android:textColor="#FFFFFF"
                     android:gravity="center_vertical"
                     android:layout_marginRight="16dp"
@@ -74,7 +72,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16dp"
-                    android:text="1 Traveler"
                     android:textColor="#FFFFFF"
                     android:gravity="center_vertical"
                     android:layout_marginRight="16dp"
@@ -88,7 +85,7 @@
 
     <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/widget_container"
-        android:background="#FFFFFF"
+        android:background="#66000000"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
