168 changing background color of itin card in Trips bar
Summary: in trips bar, for tvly itins display will have tvly blue background

Reviewers: brennan

Reviewed By: brennan

CC: sugupta

Differential Revision: https://phabricator.mobiata.com/D123

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -300,4 +300,8 @@
     <attr name="itinDefaultPlaceholderDrawable" format="reference" />
     <attr name="itinCardTitleBackground" format="reference" />
 
+    <!-- trips tab related -->
+    <attr name="itinCardBackground" format="reference"/>
+    <attr name="itinFlightsTripLineColor" format="reference"/>
+
 </resources>
