168 UI changes needed for find_itinerary button
Summary: in the trips bar, find itinerary button in case of Tvly app should have green
background (have created separate files will replace them once we get the assets)

Reviewers: brennan

Reviewed By: brennan

CC: sugupta

Differential Revision: https://phabricator.mobiata.com/D124

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -291,6 +291,8 @@
     <attr name="travellerInfoPageLogo" format="reference"/>
     <attr name="travellerInfoPageLogoDisabled" format="reference"/>
 
+    <!-- for itinerary in Trips tab -->
+    <attr name="bgFindItineraryButton" format="reference"/>
     <!-- Itin placeholder drawables -->
     <attr name="itinActivityPlaceholderDrawable" format="reference" />
     <attr name="itinCarPlaceholderDrawable" format="reference" />
