Clicking on trips for itin was making it crash on tablet as attribute was missing in ItinTheme
Reviewers: brennan

Reviewed By: brennan

Differential Revision: https://phabricator.mobiata.com/D126

--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -291,6 +291,7 @@
     <style name="ItineraryTheme" parent="@style/Theme.Sherlock.Light.DarkActionBar">
         <item name="logo">@drawable/ic_action_bar_expedia_logo_small</item>
         <item name="android:logo">@drawable/ic_action_bar_expedia_logo_small</item>
+        <item name="hotelListMapMarkerDrawable">@drawable/map_pin_normal</item>
     </style>
 
     <style name="LaunchActionBar" parent="Widget.Sherlock.Light.ActionBar.Solid.Inverse">
