--- a/project/res/layout/activity_tablet_results.xml
+++ b/project/res/layout/activity_tablet_results.xml
@@ -14,6 +14,7 @@
     <!-- TRIP BUCKET -->
     <com.expedia.bookings.widget.FixedTranslationFrameLayout
         android:id="@+id/trip_bucket_container"
+        android:background="#FFFFFF"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
