--- a/project/res/layout/fragment_tablet_results_search.xml
+++ b/project/res/layout/fragment_tablet_results_search.xml
@@ -85,9 +85,9 @@
 
     <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/widget_container"
-        android:background="#66000000"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#CC000000">
 
         <com.expedia.bookings.widget.FrameLayoutTouchController
             android:id="@+id/calendar_container"
