313 314 Change search button and action bar on table launch page
Summary:
Changed action bar to travelocity blue.
Changed search button to green. Will need assets for button.

Reviewers: brad

Differential Revision: https://phabricator.mobiata.com/D143

--- a/project/res/layout-port/fragment_search_params.xml
+++ b/project/res/layout-port/fragment_search_params.xml
@@ -112,7 +112,7 @@
 
                 <Button
                     android:id="@+id/search_button"
-                    style="@style/Widget.Button.Yellow.Search"
+                    style="?attr/hotelSearchButtonStyle"
                     android:layout_width="fill_parent"
                     android:layout_height="96dp"
                     android:text="@string/search_for_hotels"
