--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -306,4 +306,6 @@
     <attr name="itinCardBackground" format="reference"/>
     <attr name="itinFlightsTripLineColor" format="reference"/>
 
+    <attr name="hotelSearchButtonStyle" format="reference"/>
+
 </resources>
