--- a/project/res/layout/fragment_search_params.xml
+++ b/project/res/layout/fragment_search_params.xml
@@ -112,7 +112,7 @@
 
                 <Button
                     android:id="@+id/search_button"
-                    style="@style/Widget.Button.Yellow.Search"
+                    style="?attr/hotelSearchButtonStyle"
                     android:layout_width="fill_parent"
                     android:layout_height="85dp"
                     android:layout_marginBottom="-10dp"
