316 Changes for calendar on tablet launch to show travelocity blue
Summary: Drawables are the same as used for mobile.

Reviewers: brad

Differential Revision: https://phabricator.mobiata.com/D147

--- a/project/res/layout/include_calendar.xml
+++ b/project/res/layout/include_calendar.xml
@@ -16,7 +16,7 @@
         mobiata:cellTextColor="@color/calendar_cell_text"
         mobiata:drawGridLines="false"
         mobiata:headerHeight="52dp"
-        mobiata:popupBackground="@drawable/calendar_date_picker_popup"
-        mobiata:stateCellDrawable="@drawable/calendar_date_picker_cell" />
+        mobiata:popupBackground="?attr/calendarDatePickerPopupDrawable"
+        mobiata:stateCellDrawable="?attr/calendarDatePickerCellDrawable" />
 
 </FrameLayout>
