--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -45,6 +45,8 @@
         <item name="simpleNumberPickerInputTextStyle">@style/NumberPickerText</item>
         <item name="simpleNumberPickerUpButtonStyle">@style/NumberPickerButton.Up</item>
         <item name="hotelSearchButtonStyle">@style/Widget.Button.Yellow.Search</item>
+        <item name="calendarDatePickerCellDrawable">@drawable/calendar_date_picker_cell</item>
+        <item name="calendarDatePickerPopupDrawable">@drawable/calendar_date_picker_popup</item>
     </style>
 
     <style name="TabletLauncherActionBar" parent="Widget.Sherlock.ActionBar">
