TabResRef - Add some space between columns.
The approach we take for this is to just add additional skinny columns.
I messed around with adding paddings and stuff, but ultimately this ends up
being easier because we dont need to set different padding values for different
containers at different times.

--- a/project/res/values/dimens.xml
+++ b/project/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <!-- Tablet results -->
     <dimen name="checkbox_filter_widget_padding_left">38dp</dimen>
     <dimen name="sliding_filter_row_height">44dp</dimen>
+    <dimen name="results_column_spacing">2dp</dimen>
 
     <!-- Flights -->
     <dimen name="tablet_filter_white_space">32dp</dimen>
