--- a/project/res/layout/fragment_results_dates.xml
+++ b/project/res/layout/fragment_results_dates.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
@@ -15,7 +14,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:textColor="@android:color/white"
-        android:textSize="16dp"/>
+        android:textSize="16dp" />
 
 
     <com.mobiata.android.time.widget.CalendarPicker
@@ -25,6 +24,6 @@
         android:layout_gravity="center"
         android:layout_weight="1"
         android:background="@drawable/bg_dates_calendar_picker"
-        android:padding="2dp"/>
+        android:padding="2dp" />
 </LinearLayout>
 
