Changing background image for travelocity
Summary: Changing launch background image on tablet for travelocity

Reviewers: brad

Differential Revision: https://phabricator.mobiata.com/D148

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -307,5 +307,7 @@
     <attr name="itinFlightsTripLineColor" format="reference"/>
 
     <attr name="hotelSearchButtonStyle" format="reference"/>
+    <attr name="searchBackgroundPortraitDrawable" format="reference"/>
+    <attr name="searchBackgroundLandscapeDrawable" format="reference"/>
 
 </resources>
