--- a/project/res/layout/fragment_search_params.xml
+++ b/project/res/layout/fragment_search_params.xml
@@ -6,7 +6,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/bg_search_landscape"
+        android:background="?attr/searchBackgroundLandscapeDrawable"
         android:scaleType="centerCrop" />
 
     <LinearLayout
