322 changing company logo in receipt layout in tablet hotels
Summary: In tablet while selecting room in hotel a receipt is shown. This receipt had expedia logo.

Reviewers: brennan

Reviewed By: brennan

CC: sugupta

Differential Revision: https://phabricator.mobiata.com/D150

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -310,4 +310,6 @@
     <attr name="searchBackgroundPortraitDrawable" format="reference"/>
     <attr name="searchBackgroundLandscapeDrawable" format="reference"/>
 
+    <attr name="companyLogoForReceipt" format="reference"/>
+
 </resources>
