--- a/project/res/layout/include_receipt.xml
+++ b/project/res/layout/include_receipt.xml
@@ -45,7 +45,7 @@
                     android:layout_gravity="right"
                     android:layout_marginTop="7dp"
                     android:layout_marginRight="1dp"
-                    android:src="@drawable/expedia_logo_126dp" />
+                    android:src="?attr/companyLogoForReceipt" />
 
                 <TextView
                     android:id="@+id/name_text_view"
