--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -30,6 +30,7 @@
         <item name="simpleNumberPickerDownButtonStyle">@style/NumberPickerButton.Down</item>
         <item name="simpleNumberPickerInputTextStyle">@style/NumberPickerText</item>
         <item name="simpleNumberPickerUpButtonStyle">@style/NumberPickerButton.Up</item>
+        <item name="companyLogoForReceipt">@drawable/expedia_logo_126dp</item>
     </style>
 
     <style name="Theme.Tablet.Launcher" parent="@style/Theme.Sherlock.Light.DarkActionBar">
