--- a/project/res/layout/fragment_tablet_results_list.xml
+++ b/project/res/layout/fragment_tablet_results_list.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
     <!-- The list view -->
 
@@ -10,11 +10,11 @@
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="@dimen/results_list_margin_top"
         android:cacheColorHint="@color/tablet_white_pane_bg"
         android:choiceMode="singleChoice"
         android:divider="@color/tablet_white_pane_bg"
-        android:dividerHeight="8dp"
+        android:dividerHeight="@dimen/results_list_spacer_height"
         android:listSelector="@android:color/transparent"
         android:scrollbars="none"
         app:footerSpacerColor="@color/tablet_white_pane_bg"
@@ -29,10 +29,11 @@
     <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/sticky_header_container"
         android:layout_width="match_parent"
-        android:layout_height="64dp"
+        android:layout_height="@dimen/results_column_header_height"
         android:background="@color/tablet_white_pane_bg"
         android:gravity="center_vertical"
-        android:visibility="visible" >
+        android:layout_margin="0dp"
+        android:visibility="visible">
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/sticky_number_of_items"
