--- a/project/res/layout/fragment_tablet_results_trip_bucket.xml
+++ b/project/res/layout/fragment_tablet_results_trip_bucket.xml
@@ -13,7 +13,7 @@
         <com.expedia.bookings.widget.TextView
             android:id="@+id/trip_bucket_heading"
             android:layout_width="wrap_content"
-            android:layout_height="64dp"
+            android:layout_height="@dimen/results_column_header_height"
             android:layout_gravity="center_vertical|left"
             android:layout_marginLeft="16dp"
             android:gravity="center_vertical|left"
