--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -298,6 +298,20 @@
         <item name="logo">@drawable/ic_action_bar_expedia_logo_small</item>
         <item name="android:logo">@drawable/ic_action_bar_expedia_logo_small</item>
         <item name="hotelListMapMarkerDrawable">@drawable/map_pin_normal</item>
+
+        <!-- PopupMenu -->
+        <item name="dropDownListViewStyle">@style/Widget.Sherlock.Light.ListView.DropDown</item>
+        <item name="android:dropDownListViewStyle">@style/Widget.Sherlock.Light.ListView.DropDown</item>
+        <item name="logoutConfirmationString">@string/logout_confirmation</item>
+        <item name="itinActivityPlaceholderDrawable">@drawable/itin_header_placeholder_activities</item>
+        <item name="itinCarPlaceholderDrawable">@drawable/default_flights_background</item>
+        <item name="itinCruisePlaceholderDrawable">@drawable/itin_header_placeholder_cruises</item>
+        <item name="itinHotelPlaceholderDrawable">@drawable/bg_itin_placeholder</item>
+        <item name="itinFlightPlaceholderDrawable">@drawable/bg_itin_placeholder_flight</item>
+        <item name="itinDefaultPlaceholderDrawable">@drawable/bg_itin_fallback_activity</item>
+        <item name="itinCardTitleBackground">@drawable/bg_itin_card_title</item>
+        <item name="itinCardBackground">@drawable/bg_itin_card</item>
+        <item name="itinFlightsTripLineColor">@color/itin_flight_line_color</item>
     </style>
 
     <style name="LaunchActionBar" parent="Widget.Sherlock.Light.ActionBar.Solid.Inverse">
