--- a/project/res/layout/section_credit_card.xml
+++ b/project/res/layout/section_credit_card.xml
@@ -1,38 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- This is a LinearLayout -->
 <com.expedia.bookings.section.CreditCardSection xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/CvvScreenCreditCardSignatureSection"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:id="@+id/credit_card_section"
+    android:layout_width="302dp"
+    android:layout_height="190dp"
+    android:layout_gravity="right"
+    android:background="@drawable/bg_credit_card_back_full"
     android:orientation="vertical"
     android:paddingBottom="15dp"
     android:paddingRight="8dp"
-    android:paddingTop="68dp" >
+    android:paddingTop="68dp"
+    android:paddingLeft="10dp">
 
-    <RelativeLayout
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/Authorized_Signature"
+        android:textAllCaps="true"
+        android:textColor="#ffffff"
+        android:textSize="8dp" />
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
-
-        <ImageView
-            android:id="@+id/hologram_image_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:scaleType="center"
-            android:src="?attr/ccCheckoutHologramDrawable" />
 
         <View
             android:id="@+id/credit_card_signature_bg_view"
             style="@style/CvvScreenCreditCardSignatureBackground"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignBottom="@+id/hologram_image_view"
-            android:layout_alignParentLeft="true"
-            android:layout_alignTop="@+id/hologram_image_view"
-            android:layout_marginBottom="6dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="6dp"
-            android:layout_toLeftOf="@+id/hologram_image_view"
-            android:background="@drawable/bg_credit_card_signature_tile" />
+            android:layout_width="match_parent"
+            android:layout_height="34dp"
+            android:layout_marginBottom="4dp"
+            android:layout_marginRight="2dp"
+            android:layout_marginTop="4dp"
+            android:background="#24ffffff" />
 
         <TextView
             android:id="@+id/signature_text_view"
@@ -43,7 +43,14 @@
             android:textColor="@android:color/black"
             android:textScaleX=".8"
             android:textSize="20dp" />
-    </RelativeLayout>
+    </FrameLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/Not_Valid_Unless_Signed"
+        android:textColor="#ffffff"
+        android:textSize="8dp" />
 
     <!-- Fill space, make room for the text that goes on top -->
 
@@ -52,19 +59,7 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
-    <com.expedia.bookings.widget.CreditCardImprintTextView
-        android:id="@+id/name_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginBottom="12dp"
-        android:layout_marginLeft="-32dp"
-        android:layout_marginRight="6dp"
-        android:gravity="center_vertical"
-        android:singleLine="true"
-        android:textColor="#231F23"
-        android:textSize="16dp" />
-
+    <!-- Visa, AMEX, etc. logo -->
     <ImageView
         android:id="@+id/cc_logo_image_view"
         android:layout_width="wrap_content"
