--- a/project/res/values-sw600dp/styles.xml
+++ b/project/res/values-sw600dp/styles.xml
@@ -2,15 +2,16 @@
 <resources>
     <style name="Widget.TextView.CVVPromptBase">
         <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginLeft">16dp</item>
+        <item name="android:layout_marginRight">16dp</item>
         <item name="android:maxWidth">300dp</item>
-        <item name="android:layout_marginTop">48dp</item>
         <item name="android:shadowColor">#2D000000</item>
         <item name="android:shadowDx">0</item>
         <item name="android:shadowDy">1</item>
         <item name="android:shadowRadius">.1</item>
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:textSize">15dp</item>
-        <item name="maxTextSize">15dp</item>
+        <item name="android:textSize">26sp</item>
         <item name="minTextSize">15dp</item>
     </style>
 </resources>
