--- a/project/res/values/ids.xml
+++ b/project/res/values/ids.xml
@@ -35,4 +35,7 @@
     <item name="calendar_flight_desc_support_TEMPLATE_tvly" type="string"/>
     <item name="calendar_flight_desc_itinerary_TEMPLATE_tvly" type="string"/>
 
-</resources>
+    <!-- for using Id while running Expedia app, this is for the message shown on clearing private data-->
+    <item name="dialog_message_logged_out_and_cleared_private_data_tvly" type="string"/>
+
+ </resources>
