--- a/project/res/layout/fragment_tablet_flight_add_to_trip.xml
+++ b/project/res/layout/fragment_tablet_flight_add_to_trip.xml
@@ -2,32 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root_layout"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content">
 
-    <FrameLayout
-        android:id="@+id/add_to_trip_row"
+    <include
+        android:id="@+id/flight_row"
         android:layout_width="@dimen/tablet_tripbucket_card_width"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true" >
+        android:layout_height="@dimen/tablet_tripbucket_card_height"
+        android:layout_centerInParent="true"
+        layout="@layout/flight_card_tablet_add_tripbucket" />
 
-        <include
-            android:id="@+id/flight_row"
-            layout="@layout/flight_card_tablet_add_tripbucket" />
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/add_to_trip_loading_message_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/add_to_trip_row"
-        android:layout_centerHorizontal="true" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Adding flight to trip..."
-            android:textSize="22sp" />
-    </FrameLayout>
 
 </RelativeLayout>
