386 Change background color of Hotel attach card
Reviewers: brad

Differential Revision: https://phabricator.mobiata.com/D157

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -322,4 +322,8 @@
     <attr name="calendarRangeStartCellDrawable" format="reference"/>
     <attr name="calendarRangeEndCellDrawable" format="reference"/>
 
+    <attr name="itinHotelAttachButtonDrawable" format="reference"/>
+    <attr name="itinDismissListSelectorDrawable" format="reference"/>
+
+
 </resources>
