--- a/project/res/layout/widget_itin_button_card.xml
+++ b/project/res/layout/widget_itin_button_card.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:orientation="horizontal"
-        android:background="@drawable/btn_hotel_attach"
+        android:background="?attr/itinHotelAttachButtonDrawable"
         android:gravity="center">
 
         <FrameLayout
@@ -26,7 +26,7 @@
             android:id="@+id/dismiss_image_view"
             android:layout_width="48dp"
             android:layout_height="match_parent"
-            android:background="@drawable/list_selector_holo_dark"
+            android:background="?attr/itinDismissListSelectorDrawable"
             android:src="@drawable/abs__ic_menu_moreoverflow_holo_dark"
             android:scaleType="centerInside"/>
 
