386 Change background color of Hotel attach card
Reviewers: brad

Differential Revision: https://phabricator.mobiata.com/D157

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -433,4 +433,9 @@
     <attr name="itinCardBackground" format="reference"/>
     <attr name="itinFlightsTripLineColor" format="reference"/>
 
+    <attr name="companyLogoForReceipt" format="reference"/>
+
+    <attr name="itinHotelAttachButtonDrawable" format="reference"/>
+    <attr name="itinDismissListSelectorDrawable" format="reference"/>
+
 </resources>
