--- a/project/res/layout/fragment_itin_card.xml
+++ b/project/res/layout/fragment_itin_card.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_itinerary_card_popup"
+    android:background="?attr/itinTabletCardPopupBackgroundDrawable"
     android:orientation="vertical" >
 
     <!-- Header -->
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="52dp"
-        android:background="@drawable/bg_itinerary_card_popup_header"
+        android:background="?attr/itinTabletCardPopupHeaderDrawable"
         android:orientation="horizontal" >
 
         <FrameLayout
