--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -325,5 +325,7 @@
     <attr name="itinHotelAttachButtonDrawable" format="reference"/>
     <attr name="itinDismissListSelectorDrawable" format="reference"/>
 
+    <attr name="itinTabletCardPopupBackgroundDrawable" format="reference"/>
+    <attr name="itinTabletCardPopupHeaderDrawable" format="reference"/>
 
 </resources>
