396 Changing Itin card background for tablet
Reviewers: brad

Differential Revision: https://phabricator.mobiata.com/D166

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -438,4 +438,7 @@
     <attr name="itinHotelAttachButtonDrawable" format="reference"/>
     <attr name="itinDismissListSelectorDrawable" format="reference"/>
 
+    <attr name="itinTabletCardPopupBackgroundDrawable" format="reference"/>
+    <attr name="itinTabletCardPopupHeaderDrawable" format="reference"/>
+
 </resources>
