Changin hotel details rate ribbon color
Reviewers: brad

Reviewed By: brad

Differential Revision: https://phabricator.mobiata.com/D168

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -328,4 +328,6 @@
     <attr name="itinTabletCardPopupBackgroundDrawable" format="reference"/>
     <attr name="itinTabletCardPopupHeaderDrawable" format="reference"/>
 
+    <attr name="hotelRoomRateRibbonLeft" format="reference"/>
+
 </resources>
