--- a/project/res/layout-port/include_summarized_room_rates.xml
+++ b/project/res/layout-port/include_summarized_room_rates.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="-7.5dp"
         android:layout_marginTop="5dp"
-        android:background="@drawable/bg_normal_ribbon_left"
+        android:background="?attr/hotelRoomRateRibbonLeft"
         android:gravity="center" >
 
         <TextView
