Changing hotel details 'See details' and 'Select Room' color to green
Reviewers: brad

Differential Revision: https://phabricator.mobiata.com/D159

--- a/project/res/layout/include_summarized_room_rates.xml
+++ b/project/res/layout/include_summarized_room_rates.xml
@@ -153,7 +153,7 @@
 
     <com.mobiata.android.widget.AutoResizeTextView
         android:id="@+id/more_button"
-        style="@style/Widget.Button.Yellow"
+        style="?attr/hotelDetailsTabletButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginBottom="10dp"
