--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -43,6 +43,7 @@
         <item name="calendarRangeEndCellDrawable">@drawable/bg_calendar_cell_range_end</item>
 
         <item name="hotelRoomRateRibbonLeft">@drawable/bg_normal_ribbon_left</item>
+        <item name="hotelDetailsTabletButtonStyle">@style/Widget.Button.Yellow</item>
     </style>
 
     <style name="Theme.Tablet.Launcher" parent="@style/Theme.Sherlock.Light.DarkActionBar">
