--- a/project/res/layout-port/include_summarized_room_rates.xml
+++ b/project/res/layout-port/include_summarized_room_rates.xml
@@ -47,7 +47,7 @@
 
     <com.mobiata.android.widget.AutoResizeTextView
         android:id="@+id/more_button"
-        style="@style/Widget.Button.Yellow"
+        style="?attr/hotelDetailsTabletButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
