--- a/project/res/layout/action_menu_item_guests.xml
+++ b/project/res/layout/action_menu_item_guests.xml
@@ -21,7 +21,7 @@
         android:background="@null"
         android:focusable="false"
         android:scaleType="fitCenter"
-        android:src="@drawable/ic_action_guests" />
+        android:src="?attr/actionBarTabletGuestsDrawable" />
 
     <TextView
         android:id="@+id/guests_text_view"
