--- a/project/res/layout/fragment_tablet_checkout_controller.xml
+++ b/project/res/layout/fragment_tablet_checkout_controller.xml
@@ -101,24 +101,11 @@
                     android:layout_weight="1"/>
 
                 <FrameLayout
-                    android:id="@+id/finish_checkout_container"
+                    android:id="@+id/slide_container"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:layout_weight="0"
-                    android:background="#FF0000"
-                    android:visibility="gone">
-
-                    <!-- TODO: We will probably end up with a fragment here, or a much more complicated view based on the mocks -->
-
-                    <TextView
-                        android:id="@+id/goto_cvv_btn"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:text="GOTO CVV SCREEN"
-                        android:textColor="#FFFFFF"
-                        android:textSize="32dp"/>
-                </FrameLayout>
+                    android:visibility="gone"/>
             </LinearLayout>
 
             <FrameLayout
