389 Change user review block colors
Summary:
Changed user review colors for details page on tablet.
Also changed the review dialog colors for tablet.

Reviewers: brad

Differential Revision: https://phabricator.mobiata.com/D160

--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -44,6 +44,10 @@
 
         <item name="hotelRoomRateRibbonLeft">@drawable/bg_normal_ribbon_left</item>
         <item name="hotelDetailsTabletButtonStyle">@style/Widget.Button.Yellow</item>
+
+        <item name="userRatingTabletSnippetStyle">@style/RatingBarSmall.UserReview</item>
+        <item name="reviewsTitleTabletStyle">@style/RatingBarSmall.Shadowed.UserReview</item>
+
     </style>
 
     <style name="Theme.Tablet.Launcher" parent="@style/Theme.Sherlock.Light.DarkActionBar">
@@ -63,6 +67,7 @@
         <item name="calendarDatePickerPopupDrawable">@drawable/calendar_date_picker_popup</item>
         <item name="searchBackgroundPortraitDrawable">@drawable/bg_search_portrait</item>
         <item name="searchBackgroundLandscapeDrawable">@drawable/bg_search_landscape</item>
+
     </style>
 
     <style name="TabletLauncherActionBar" parent="Widget.Sherlock.ActionBar">
