--- a/project/res/layout/include_reviews_section_title.xml
+++ b/project/res/layout/include_reviews_section_title.xml
@@ -13,7 +13,7 @@
 
     <RatingBar
         android:id="@+id/user_rating_bar"
-        style="@style/RatingBarSmall.Shadowed.UserReview"
+        style="?attr/reviewsTitleTabletStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/reviews_title"
